packages/smart-import/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    app.kubernetes.io/name: smartimport
