packages/smart-import/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartimport
  namespace: production
spec:
  type: LoadBalancer
  selector:
    app: smartimport
  ports:
    - name: http
      port: 80
      targetPort: http
